@@ -1,4 +1,6 @@
 ver 0.5.4
+- Added support for ASTC formats. (6x6, 8x8, 10x10, and 12x12)
+- Fixed a bug that the DDS converter will accept unknown DXGI formats.
 - Fixed a bug that the portable python can refer the installed python with some environment variables.
 - Updated GUI to v0.5.1
 
